# openstack-vm-lifecycle-api

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: vms.py
app/core/: config.py  exceptions.py  logging_config.py  middleware.py
app/schemas/: vm.py
app/services/: openstack_client.py  vm_service.py
docs/: agile-collaboration.md  architecture.md  development-log.md  roadmap-backlog.md  sdlc.md
tests/: conftest.py  test_vm_api.py
